hero - offset top position by header height - prevent overlap

--- a/ui/src/patterns/_patterns/01-molecules/blocks/hero/_hero.scss
+++ b/ui/src/patterns/_patterns/01-molecules/blocks/hero/_hero.scss
@@ -1,4 +1,10 @@
 .c-hero {
+  padding-top:
+    $inuit-global-spacing-unit-huge -
+    $inuit-global-spacing-unit;
+}
+
+.c-hero__img {
   position: relative;
   min-height: $global-hero-height;
 
